Prevent layout shift when clicking small secondary buttons

--- a/app/assets/stylesheets/_button.scss
+++ b/app/assets/stylesheets/_button.scss
@@ -65,9 +65,14 @@ $button-shadow-size: 4px;
     color: $nhsuk-focus-text-color;
   }
 
+  &:focus:visited:active {
+    // Override .nhsuk-button turning colour white
+    color: $button-color;
+  }
+
   &:active {
     background-color: rgba($button-color, 15%);
-    border-bottom: 2px solid; // Reintroduce 2px bottom border
+    border-bottom: $nhsuk-border-width-form-element solid; // Reintroduce 2px bottom border
     border-color: $button-color;
     color: $button-color;
     // Revert padding to account for reintroduction of 2px bottom border
@@ -75,9 +80,14 @@ $button-shadow-size: 4px;
     padding-top: 12px;
   }
 
-  &:focus:visited:active {
-    // Override .nhsuk-button turning colour white
-    color: $button-color;
+  &::before {
+    top: #{$nhsuk-border-width-form-element * -1};
+    bottom: #{$button-shadow-size * -1};
+  }
+
+  &:active::before {
+    top: #{($nhsuk-border-width-form-element + $button-shadow-size) * -1};
+    bottom: #{($nhsuk-border-width-form-element + $button-shadow-size) * -1};
   }
 }
 
@@ -95,7 +105,15 @@ $button-shadow-size: 4px;
 
   &.app-button--secondary,
   &.app-button--secondary-warning {
+    // Adjust padding to account for removal of 2px bottom border
     padding-bottom: #{nhsuk-spacing(1) + 1px};
     padding-top: #{nhsuk-spacing(1) + 1px};
+
+    &:active {
+      // Revert padding to account for reintroduction of 2px bottom border
+      padding-bottom: nhsuk-spacing(1);
+      padding-top: nhsuk-spacing(1);
+      margin-bottom: -1px;
+    }
   }
 }
